@@ -17,11 +17,13 @@
 * Current
 ** Added
 
-** Chnaged
+** Changed
+Expanded stage0 web IDE to include the PC and instruction counter
 
 ** Fixed
 Fixed behavior of R@ thanks to reepca
 Updated changed checksums for stage2 FORTH
+Corrected behavior when using the web IDE and attempting to set registers that don't exist
 
 ** Removed
 
